# unofficial-remnote-bridge-cli

./: .gitignore  .gitmodules  .npmignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  README_CN.md  package-lock.json  package.json  skills-lock.json  tsconfig.json
.agents/skills/: remnote-bridge
.claude/: CLAUDE.md  gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.claude/rules/: REMNOTE-SDK-INDEX.md
.claude/skills/: remnote-bridge  remnote-bridge-test
.planning/: PROJECT.md  config.json
ai-chat/: pyproject.toml  requirements.txt
ai-chat/ai_chat/: __init__.py  __main__.py  agent.py  context.py  server.py  session.py  storage.py
docs/: headless-chrome-auto-start.md
public/: manifest.json
remnote-bridge-test/: SKILL.md
remnote-cli/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
remnote-plugin/: .gitignore  .npmignore  AGENTS.md  package-lock.json  package.json  vitest.config.ts  webpack.config.js
scripts/: check-layer-deps.cjs  check-layer-deps.js  crawl-helpcenter.sh  crawl-remnote-docs.sh
skill/: SKILL.md
test/: config.test.ts
todos/: 003-pending-p1-json-error-messages-mixed-language.md  005-resolved-p2-send-request-timer-leak.md  007-resolved-p2-count-occurrences-overlap.md  012-resolved-p2-log-file-overwrite.md  014-pending-p3-duplicated-command-error-handling.md  018-pending-p2-plugin-lacks-type-guards.md
(+605 files in other folders)
