[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remnote-bridge-ai-chat"
version = "0.1.0"
description = "AI Chat backend for RemNote Bridge (PydanticAI + FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
